minor index.html improvements

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart Wardrobe Tracker M3</title>
+    <title>laundrain</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Lucide Icons for M3 Visuals -->
@@ -73,7 +73,7 @@
         
         <!-- App Logo/Header -->
         <div class="h-14 flex items-center justify-center">
-            <span class="text-xl font-bold" style="color: var(--md-sys-color-primary);">SW</span>
+            <span class="text-xl font-bold" style="color: var(--md-sys-color-primary);">Lr</span>
         </div>
         
         <!-- FAB (Extended Floating Action Button Placeholder) -->
