updated the index.html, app.js in frontend

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -375,7 +375,7 @@
         lucide.createIcons();
 
         // --- CONFIG ---
-        const API_URL = 'http://localhost:3000';
+        const API_URL = 'https://laundry-tracker-backend.onrender.com';
         let authToken = localStorage.getItem('auth_token');
         let isSignup = false;
         let currentView = 'catalog';
